Changed markdown interpreter from redcarpet to kramdown; Changed syntax help to reflect interpreter change; Changed code styling to be more readable; Fixed table styling; Changed to less saturated background; Changed text accent color to green instead of light-green; Changed contact submit button to match text accent color; Changed copyright to 2016; Adjusted layout of footer so elements are better aligned; Added favicon

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -78,17 +78,6 @@ figcaption {
 	font-weight: bold;
 }
 
-/* Make footer stick to bottom */
-body {
-	display: flex;
-	min-height: 100vh;
-	flex-direction: column;
-}
-
-main {
-	flex: 1 0 auto;
-}
-
 /* Quotes */
 blockquote {
 	border-left: 5px solid #c5e1a5 !important;
@@ -99,7 +88,7 @@ pre,
 code {
 	font-size: 15px;
 	border-radius: 3px;
-	background-color: #e6ee9c;
+	color: #688E68;
 }
 
 code {
@@ -132,7 +121,7 @@ pre {
 
 /* Links */
 p a {
-	color: #c5e1a5 !important;
+	color: #A5D6A7 !important;
 	&:hover {
 	text-decoration: underline;
 	}
@@ -165,3 +154,30 @@ p img {
 /*#banner {
 	max-height: 324px;
 }*/
+
+/* Table */
+table {
+	background-color: white;
+	border-radius: 2px;
+	color: #263238;
+}
+tr td:first-child,
+tr th:first-child  {
+	padding-left: 15px;
+}
+tr td:last-child,
+tr th:last-child  {
+	padding-right: 15px;
+}
+
+/* Bold Formatting */
+b, 
+strong {
+    font-weight: bold !important;
+    letter-spacing: 1px;
+}
+
+/* Paragraph */
+p {
+	letter-spacing: 0.02em;
+}
